# securefs

./: .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  _clang-format  build.py  cryptopp  format.sh  linux-build.sh  main.cpp  vcpkg.json
.github/workflows/: ccpp.yml  freebsd.yml  release.yml
cmake/: FeatureDetection.cmake  FindFUSE.cmake
cryptopp-5.6.2/: GNUmakefile
cryptopp-5.6.3/: CMakeLists.txt  GNUmakefile
cryptopp-5.6.3/TestVectors/: Readme.txt  all.txt
docs/: README.md  changelog.md  design.md  info.md  long_name.md  usage.md
overlay_ports/fruit/: portfile.cmake  vcpkg.json
overlay_triplets/: arm64-linux.cmake  arm64-osx.cmake  clang-cl-toolchain.cmake  x64-freebsd.cmake  x64-linux-asan.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows-clang-cl.cmake  x64-windows-static-md.cmake
protos/: params.proto
sources/: aes_siv.cpp  aes_siv.h  apple_xattr_workaround.cpp  apple_xattr_workaround.h  btree_dir.cpp  btree_dir.h  case_fold.cpp  case_fold.h  commands.cpp  commands.h  commands_v2.cpp  commands_v2.h  common_platform.cpp  config.template  constants.h  crypto.cpp  crypto.h  crypto_wrappers.cpp  crypto_wrappers.h  def.h  di.h  exceptions.cpp  exceptions.h  file_table.cpp  file_table.h  file_table_v2.cpp  file_table_v2.h  files.cpp  files.h  format.cpp  format.h  full_format.cpp  full_format.h  fuse2_workaround.cpp  fuse2_workaround.h  fuse_high_level_ops_base.cpp  fuse_high_level_ops_base.h  fuse_hook.cpp  fuse_hook.h  fuse_tracer.cpp  (+64 more)
sources/win/: lite_winfsp.cpp  lite_winfsp.h  nt_directory_iterator.cpp  nt_directory_iterator.h  nt_exception.cpp  nt_exception.h  nt_stream.cpp  nt_stream.h  ntdecls.h  smart_handle.h  win.cpp  winfsp_wrappers.cpp  winfsp_wrappers.h
test/: ctrl_c.py  ignore_ctrl_c.py  main.cpp  sharded_simple_test_main.py  simple_test.py  test_btree.cpp  test_common.cpp  test_common.h  test_constants.cpp  test_crypto.cpp  test_di.cpp  test_files.cpp  test_full_format.cpp  test_integration.cpp  test_io.cpp  test_lite_format.cpp  test_main.cpp  test_params_io.cpp  test_resettable_timer.cpp  test_siv.cpp  test_stat_workaround.cpp  test_streams.cpp  test_streams.h  test_thread_local.cpp  test_utils.cpp  test_win.cpp  test_xattr_workaround.cpp
test/reference/: chpass_all.py  keyfile
test/reference/1/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.argon2id.PASSWORD.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE2.json  .securefs.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE2.json  .securefs.scrypt.KEYFILE.json  .securefs.scrypt.KEYFILE2.json  .securefs.scrypt.PASSWORD.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE2.json
test/reference/1-keyfile/: .securefs.json
test/reference/1-padded/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.argon2id.PASSWORD.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE2.json  .securefs.scrypt.KEYFILE.json  .securefs.scrypt.KEYFILE2.json  .securefs.scrypt.PASSWORD.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE2.json
test/reference/2/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.argon2id.PASSWORD.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE2.json  .securefs.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE2.json  .securefs.scrypt.KEYFILE.json  .securefs.scrypt.KEYFILE2.json  .securefs.scrypt.PASSWORD.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE2.json
test/reference/2-keyfile/: .securefs.json
test/reference/2-padded/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.argon2id.PASSWORD.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE2.json  .securefs.scrypt.KEYFILE.json  .securefs.scrypt.KEYFILE2.json  .securefs.scrypt.PASSWORD.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE2.json
test/reference/3/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.json  (+13 more)
test/reference/3-keyfile/: .securefs.json
test/reference/3-padded/: .securefs.argon2id.KEYFILE.json  .securefs.argon2id.KEYFILE2.json  .securefs.argon2id.PASSWORD.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE.json  .securefs.argon2id.PASSWORD_WITH_KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.KEYFILE2.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE.json  .securefs.pkcs5-pbkdf2-hmac-sha256.PASSWORD_WITH_KEYFILE2.json  .securefs.scrypt.KEYFILE.json  .securefs.scrypt.KEYFILE2.json  .securefs.scrypt.PASSWORD.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE.json  .securefs.scrypt.PASSWORD_WITH_KEYFILE2.json
test/win/: test_nt_directory_iterator.cpp  test_nt_stream.cpp  test_win.cpp
(+80 files in other folders)
